RESOLVED FIXED213211
REGRESSION (r263045): TestWTF.Signals.SignalsWorkOnExit crashing
https://bugs.webkit.org/show_bug.cgi?id=213211
Summary REGRESSION (r263045): TestWTF.Signals.SignalsWorkOnExit crashing
Ryan Haddad
Reported 2020-06-15 13:35:05 PDT
TestWTF.Signals.SignalsWorkOnExit is crashing on macOS bots after https://trac.webkit.org/changeset/263045/webkit Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 TestWTF 0x000000010ca03253 WTFCrashWithInfo(int, char const*, char const*, int) + 19 (Assertions.h:671) 1 TestWTF 0x000000010ce365ee WTF::SignalHandlers::add(WTF::Signal, WTF::Function<WTF::SignalAction (WTF::Signal, WTF::SigInfo&, __darwin_x86_thread_state64&)>&&) + 206 2 TestWTF 0x000000010ce36a9a WTF::addSignalHandler(WTF::Signal, WTF::Function<WTF::SignalAction (WTF::Signal, WTF::SigInfo&, __darwin_x86_thread_state64&)>&&) + 186 3 TestWTF 0x000000010ccadf27 Signals_SignalsWorkOnExit_Test::TestBody() + 53 (Signals.cpp:43) 4 TestWTF 0x000000010cea55d9 void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) + 72 5 TestWTF 0x000000010cea5542 testing::Test::Run() + 184 6 TestWTF 0x000000010cea619f testing::TestInfo::Run() + 199 7 TestWTF 0x000000010cea6817 testing::TestCase::Run() + 249 8 TestWTF 0x000000010ceaef83 testing::internal::UnitTestImpl::RunAllTests() + 667 9 TestWTF 0x000000010ceaebd1 bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) + 72 10 TestWTF 0x000000010ceaeb5c testing::UnitTest::Run() + 108 11 TestWTF 0x000000010cd5fc82 TestWebKitAPI::TestsController::run(int, char**) + 120 (TestsController.cpp:91) 12 TestWTF 0x000000010ce9bcc5 main + 400 (mainMac.mm:60) 13 libdyld.dylib 0x00007fff6a282cc9 start + 1 https://results.webkit.org/?suite=api-tests&test=TestWTF.Signals.SignalsWorkOnExit
Attachments
crash log (54.41 KB, text/plain)
2020-06-15 13:35 PDT, Ryan Haddad
no flags
Patch (1.46 KB, patch)
2020-06-15 13:59 PDT, Keith Miller
no flags
Radar WebKit Bug Importer
Comment 1 2020-06-15 13:35:41 PDT
Ryan Haddad
Comment 2 2020-06-15 13:35:46 PDT
Created attachment 401932 [details] crash log
Keith Miller
Comment 3 2020-06-15 13:59:12 PDT
Mark Lam
Comment 4 2020-06-15 14:06:24 PDT
Comment on attachment 401934 [details] Patch r+ to unbreak the API test using Signal::Usr. However, but looks like the only place where we add a signal handler for Signal::Usr is the API tests. Can we just make the test use a different signal and get rid of Signal::Usr altogether. Let's do that in a separate bug though.
Keith Miller
Comment 5 2020-06-15 15:05:31 PDT
(In reply to Mark Lam from comment #4) > Comment on attachment 401934 [details] > Patch > > r+ to unbreak the API test using Signal::Usr. However, but looks like the > only place where we add a signal handler for Signal::Usr is the API tests. > Can we just make the test use a different signal and get rid of Signal::Usr > altogether. Let's do that in a separate bug though. Yeah, it does look unused now. I think we had it because some ports used to use it as their thread suspension method.
EWS
Comment 6 2020-06-15 15:24:35 PDT
Committed r263065: <https://trac.webkit.org/changeset/263065> All reviewed patches have been landed. Closing bug and clearing flags on attachment 401934 [details].
Note You need to log in before you can comment on or make changes to this bug.