REGRESSION (r263045): TestWTF.Signals.SignalsWorkOnExit crashing https://bugs.webkit.org/show_bug.cgi?id=213211

Reviewed by Mark Lam.

Don't call toMachMask on Signal::Usr as mach doesn't support user exceptions.

* wtf/threads/Signals.cpp:
(WTF::SignalHandlers::add):


Canonical link: https://commits.webkit.org/226002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263065 268f45cc-cd09-0410-ab3c-d52691b4dbfc